--- a/src/ButtonsComponent/styles.module.css
+++ b/src/ButtonsComponent/styles.module.css
@@ -83,3 +83,69 @@
     justify-content: center;
     align-items: center;
 }
+
+.dropdown{
+    pointer-events: all;
+    position: absolute;
+    top: 86px;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    border: 2px solid #c4c4c4;
+    border-radius: 6px;
+    box-shadow: 1px 1px 11px -6px rgba(0, 0, 0, 0.75);
+    padding: 12px;
+    transition: all ease 0.2s;
+}
+
+.dropdownHidden{
+    transform: translateX(24px);
+    opacity: 0;
+    pointer-events: none;
+    position: absolute;
+    top: 86px;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    border: 2px solid #c4c4c4;
+    border-radius: 6px;
+    box-shadow: 1px 1px 11px -6px rgba(0, 0, 0, 0.75);
+    padding: 12px;
+    transition: all ease 0.2s;
+}
+
+.lable{
+    line-height: 1.5rem;
+    font-weight: 500;
+    font-size: 0.875rem;
+    color: #27272a;
+}
+
+.input{
+    line-height: 1.5rem;
+    font-weight: 500;
+    font-size: 0.075rem;
+    color: #27272a;
+    border-radius: 0.375rem;
+    width: 100%;
+    padding: 0.5rem 0.75rem;
+    background-color: #ffffff0d;
+    border: 1px solid #b2b3b5;
+    box-shadow: 1px 1px 11px -6px rgba(0, 0, 0, 0.75);
+    margin-bottom: 12px;
+    box-sizing: border-box;
+}
+
+.buttonRect{
+    transition: all ease 0.2s;
+    background-color: #4f46e5;
+    padding: 12px;
+    border-radius: 6px;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    pointer-events: all;
+    box-shadow: 1px 1px 11px -6px rgba(0, 0, 0, 0.75);
+    outline: none;
+    border:none;
+}
